--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-NUXT_PUBLIC_APPWRITE_ENDPOINT=
-NUXT_PUBLIC_APPWRITE_PROJECT_ID=
-NUXT_PUBLIC_APPWRITE_PROJECT_NAME=
+NUXT_PUBLIC_APPWRITE_PROJECT_ID = "67828afb00288d0e4305"
+NUXT_PUBLIC_APPWRITE_PROJECT_NAME = "JSM_ReState"
+NUXT_PUBLIC_APPWRITE_ENDPOINT = "https://fra.cloud.appwrite.io/v1"
+        
